webServerRulesWORK.v4
# Generated by iptables-save v1.8.7 on Fri Mar 22 15:38:44 2024
*filter
:INPUT DROP [7568:1661641]
:FORWARD DROP [0:0]
:OUTPUT DROP [7362:495780]
-A INPUT -i lo -j ACCEPT
-A INPUT -i zt0 -j ACCEPT
-A INPUT -s 172.28.0.0/16 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 9993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5672 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o zt0 -j ACCEPT
-A OUTPUT -d 172.28.0.0/16 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 9993 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Mar 22 15:38:44 2024
